--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Copyright 2021 © by Sekifu. All Rights Reserved. -->
+<!DOCTYPE html> <!-- Copyright 2021 © by Sefinek. All Rights Reserved. -->
 <html lang="pl">
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
 
     <h1>Error 423: Locked</h1>
     <p>Strona jest zamknięta. Poniżej znajduję się notka podana przez administratora.</p>
-    <code>Wersja testowa wystartuje już jutro! Data 19.11.2021, godzina 20:00. Noel™ można już dodać na swój serwer Discord.</code><br>
+    <code>Wersja testowa wystartuje już dziś! Data 19.11.2021, godzina 20:00. Noel™ można już dodać na swój serwer Discord.</code><br>
 
     <img src="https://http.cat/423" alt=""><br>
 
