--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS (Nie bijcie za to 😿😥) -->
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css">
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
 
     <style>
-        @media screen and (max-width:1024px) {img {width: 512px}}@media screen and (max-width:768px) {p {font-size:14px}img {width:500px}}@media screen and (max-width:500px) {h1 {font-size:23px}p {font-size:12px;margin-left:8px;margin-right:8px}img {width:400px}}@media screen and (max-width:400px) {p {font-size:12px}img {width:350px}a {margin:1px;font-size: 15px;padding:7px 17px!important}}@media screen and (max-width:375px) {h1 {font-size:22px}p {font-size:12px}img {width:330px}}@media screen and (max-width:350px) {h1 {font-size:19px;margin-left:5px;margin-right:5px}p {font-size:10px;margin-left:8px;margin-right:8px}img {width:300px}}@media screen and (max-width:324px) {a {margin:6px}}@media screen and (max-width:305px) {h1 {font-size:18px}p {font-size:10px;margin-left:24px;margin-right:24px}img {width:260px}a {margin:5px}}body {background-color:#000;color:#fff;font-family:'Noto Sans Mono',monospace!important;text-align:center }h1 {padding-bottom:12px;padding-top:32px}body {padding-bottom:20px}a {background-color:#202225;border-radius:12px 12px;color:#fff;display:inline-block;margin-bottom:25px;margin-left:10px;margin-right:10px;padding:8px 22px;text-decoration:none;text-shadow:0 0 4px #000;transition:.3s }a:hover {background-color:#2f3136;text-shadow:0 0 8px #000;color:#fff }a:active {background-color:#21252b;text-shadow:0 0 5px #000 }
+        @media screen and (max-width:1024px){img{width:512px}}@media screen and (max-width:768px){p{font-size:14px}img{width:500px}}@media screen and (max-width:500px){h1{font-size:23px}p{font-size:12px;margin-left:8px;margin-right:8px}img{width:400px}}@media screen and (max-width:400px){p{font-size:12px}img{width:350px}a{margin:1px;font-size:15px;padding:7px 17px!important}}@media screen and (max-width:375px){h1{font-size:22px}p{font-size:12px}img{width:330px}}@media screen and (max-width:350px){h1{font-size:19px;margin-left:5px;margin-right:5px}p{font-size:10px;margin-left:8px;margin-right:8px}img{width:300px}}@media screen and (max-width:324px){a{margin:6px}}@media screen and (max-width:305px){h1{font-size:18px}p{font-size:10px;margin-left:24px;margin-right:24px}img{width:260px}a{margin:5px}}body{background-color:#000;color:#fff;font-family:'Noto Sans Mono',monospace!important;text-align:center}h1{padding-bottom:12px;padding-top:32px}body{padding-bottom:20px}a{background-color:#202225;border-radius:12px 12px;color:#fff;display:inline-block;margin-bottom:25px;margin-left:10px;margin-right:10px;padding:8px 22px;text-decoration:none;text-shadow:0 0 4px #000;transition:.3s}a:hover{background-color:#2f3136;text-shadow:0 0 8px #000;color:#fff}a:active{background-color:#21252b;text-shadow:0 0 5px #000}
     </style>
 </head>
 <body>
